--- a/Bucky/GameViewController.xib
+++ b/Bucky/GameViewController.xib
@@ -18,11 +18,11 @@
                 <outlet property="cloud3" destination="O1r-6b-ZqG" id="Glo-X3-U8I"/>
                 <outlet property="cloud4" destination="YlB-ou-5MK" id="Nje-Zr-Gpb"/>
                 <outlet property="dock" destination="dDe-D7-ks6" id="oQc-tB-uBc"/>
-                <outlet property="highScoreButton" destination="QT8-rS-IWV" id="8Fi-Ih-xVh"/>
+                <outlet property="highScoreLabel" destination="ktw-Wl-p9V" id="TeY-Kv-DHV"/>
                 <outlet property="life1" destination="4Gf-1Z-b0o" id="MBq-hD-Caq"/>
                 <outlet property="life2" destination="uOB-Kd-0F3" id="MuI-Vn-qN2"/>
                 <outlet property="life3" destination="STo-vS-87c" id="ESC-6e-iHh"/>
-                <outlet property="scoreButton" destination="lAK-cT-Myk" id="DUi-6z-BSH"/>
+                <outlet property="scoreLabel" destination="ZZb-Vf-DNL" id="pGl-AU-FZb"/>
                 <outlet property="startButton" destination="7AE-UA-RDc" id="dze-di-5Ih"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -34,6 +34,7 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="zjI-oQ-Zkl">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-sunny-cloud-1" translatesAutoresizingMaskIntoConstraints="NO" id="YlB-ou-5MK">
                     <rect key="frame" x="230" y="376" width="180" height="61"/>
@@ -83,28 +84,6 @@
                         <constraint firstAttribute="height" constant="77" id="9fB-dD-8aI"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lAK-cT-Myk">
-                    <rect key="frame" x="250" y="629" width="115" height="30"/>
-                    <color key="backgroundColor" red="0.19407001137733459" green="0.093806333839893341" blue="0.075655184686183929" alpha="0.74769905821917804" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="115" id="Fss-kh-pRT"/>
-                        <constraint firstAttribute="height" constant="30" id="Smi-qF-KfW"/>
-                    </constraints>
-                    <state key="normal" title="Score : ">
-                        <color key="titleColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QT8-rS-IWV">
-                    <rect key="frame" x="10" y="629" width="115" height="30"/>
-                    <color key="backgroundColor" red="0.19215686274509802" green="0.094117647058823528" blue="0.074509803921568626" alpha="0.74769905821917804" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="115" id="cEU-ek-r2r"/>
-                        <constraint firstAttribute="height" constant="30" id="ksz-ht-vk9"/>
-                    </constraints>
-                    <state key="normal" title="High Score : ">
-                        <color key="titleColor" red="0.5957025286509906" green="0.42167919983444824" blue="0.23412729004340699" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="life" translatesAutoresizingMaskIntoConstraints="NO" id="4Gf-1Z-b0o">
                     <rect key="frame" x="140" y="632" width="25" height="25"/>
                     <constraints>
@@ -137,28 +116,48 @@
                         <action selector="startButtonTapped:" destination="-1" eventType="touchUpInside" id="Ebt-RI-ZBG"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZb-Vf-DNL">
+                    <rect key="frame" x="260" y="629" width="100" height="30"/>
+                    <color key="backgroundColor" red="0.17028188705444336" green="0.086136661469936371" blue="0.063992120325565338" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="o7u-HX-zgf"/>
+                        <constraint firstAttribute="width" constant="100" id="olj-64-N4F"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.53286647796630859" green="0.38188374042510986" blue="0.20973891019821167" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktw-Wl-p9V">
+                    <rect key="frame" x="15" y="629" width="100" height="30"/>
+                    <color key="backgroundColor" red="0.1702818871" green="0.086136661470000001" blue="0.063992120329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="2e2-oB-Met"/>
+                        <constraint firstAttribute="width" constant="100" id="sGc-7p-jmu"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.53286647799999998" green="0.3818837404" blue="0.20973891019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="7AE-UA-RDc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="1li-BM-g9J"/>
                 <constraint firstAttribute="trailing" secondItem="zjI-oQ-Zkl" secondAttribute="trailing" id="5mZ-mE-Y2r"/>
-                <constraint firstItem="zjI-oQ-Zkl" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="5u5-lV-0cS"/>
                 <constraint firstAttribute="bottom" secondItem="STo-vS-87c" secondAttribute="bottom" constant="10" id="687-6U-6UN"/>
                 <constraint firstItem="zjI-oQ-Zkl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9Lt-QM-G6c"/>
                 <constraint firstItem="7AE-UA-RDc" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Boi-8T-4EG"/>
                 <constraint firstItem="YlB-ou-5MK" firstAttribute="top" secondItem="TDy-ZB-T1N" secondAttribute="bottom" constant="150" id="Fbc-Pt-dF0"/>
                 <constraint firstAttribute="bottom" secondItem="zjI-oQ-Zkl" secondAttribute="bottom" id="FtV-1G-iGb"/>
+                <constraint firstItem="ktw-Wl-p9V" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="G8X-Xv-CZp"/>
                 <constraint firstItem="O1r-6b-ZqG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Gz0-45-com"/>
                 <constraint firstAttribute="bottom" secondItem="VXn-j8-HIH" secondAttribute="bottom" constant="32" id="Ifc-1F-4hj"/>
-                <constraint firstAttribute="bottom" secondItem="QT8-rS-IWV" secondAttribute="bottom" constant="8" id="N2w-Xo-N8S"/>
                 <constraint firstItem="dDe-D7-ks6" firstAttribute="width" secondItem="zjI-oQ-Zkl" secondAttribute="width" id="NH5-Gv-N5G"/>
-                <constraint firstAttribute="trailing" secondItem="lAK-cT-Myk" secondAttribute="trailing" constant="10" id="Nkq-hb-foj"/>
                 <constraint firstItem="zjI-oQ-Zkl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PJY-IA-fnX"/>
-                <constraint firstItem="zjI-oQ-Zkl" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="POB-6R-uyo"/>
                 <constraint firstAttribute="bottom" secondItem="Hws-h6-wam" secondAttribute="bottom" constant="46" id="QuE-PG-Yaj"/>
                 <constraint firstItem="j6a-Fs-Uy8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="140" id="QyV-J8-TRZ"/>
-                <constraint firstAttribute="bottom" secondItem="lAK-cT-Myk" secondAttribute="bottom" constant="8" id="UHP-z9-iYi"/>
+                <constraint firstAttribute="trailing" secondItem="ZZb-Vf-DNL" secondAttribute="trailing" constant="15" id="RVc-ci-lY1"/>
                 <constraint firstItem="TDy-ZB-T1N" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="180" id="URB-Ft-1y3"/>
+                <constraint firstAttribute="bottom" secondItem="ZZb-Vf-DNL" secondAttribute="bottom" constant="8" id="Wid-8p-Ym1"/>
                 <constraint firstAttribute="bottom" secondItem="uOB-Kd-0F3" secondAttribute="bottom" constant="10" id="WoL-qI-p3N"/>
                 <constraint firstItem="dDe-D7-ks6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="XAI-TD-tPq"/>
                 <constraint firstAttribute="bottom" secondItem="uOB-Kd-0F3" secondAttribute="bottom" constant="10" id="bMl-le-3dn"/>
@@ -167,12 +166,12 @@
                 <constraint firstItem="Hws-h6-wam" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="-60" id="g1o-fR-Z8J"/>
                 <constraint firstItem="uOB-Kd-0F3" firstAttribute="leading" secondItem="4Gf-1Z-b0o" secondAttribute="trailing" constant="10" id="hNb-PA-jqm"/>
                 <constraint firstAttribute="trailing" secondItem="YlB-ou-5MK" secondAttribute="trailing" constant="-35" id="nWj-ba-8aB"/>
-                <constraint firstItem="QT8-rS-IWV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="pUG-rZ-M0p"/>
                 <constraint firstItem="uOB-Kd-0F3" firstAttribute="centerX" secondItem="zjI-oQ-Zkl" secondAttribute="centerX" id="qtp-oR-B7K"/>
                 <constraint firstAttribute="bottom" secondItem="4Gf-1Z-b0o" secondAttribute="bottom" constant="10" id="v78-g8-cvn"/>
                 <constraint firstItem="STo-vS-87c" firstAttribute="leading" secondItem="uOB-Kd-0F3" secondAttribute="trailing" constant="10" id="wjG-uf-Xjd"/>
                 <constraint firstItem="O1r-6b-ZqG" firstAttribute="top" secondItem="j6a-Fs-Uy8" secondAttribute="bottom" constant="140" id="xez-qs-eHY"/>
                 <constraint firstAttribute="trailing" secondItem="VXn-j8-HIH" secondAttribute="trailing" id="ytH-xc-zf8"/>
+                <constraint firstAttribute="bottom" secondItem="ktw-Wl-p9V" secondAttribute="bottom" constant="8" id="z9S-dB-4hi"/>
                 <constraint firstItem="j6a-Fs-Uy8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="zNY-fC-dTz"/>
             </constraints>
             <point key="canvasLocation" x="33.5" y="54.5"/>
