--- a/Bucky/GameViewController.xib
+++ b/Bucky/GameViewController.xib
@@ -128,7 +128,7 @@
                     <color key="textColor" red="0.53286647799999998" green="0.3818837404" blue="0.20973891019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bucket" translatesAutoresizingMaskIntoConstraints="NO" id="HoR-jK-G7W">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Bucket" translatesAutoresizingMaskIntoConstraints="NO" id="HoR-jK-G7W">
                     <rect key="frame" x="162.5" y="581" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="BLt-UK-zIv"/>
@@ -155,7 +155,6 @@
                 <constraint firstAttribute="bottom" secondItem="ZZb-Vf-DNL" secondAttribute="bottom" constant="8" id="Wid-8p-Ym1"/>
                 <constraint firstAttribute="bottom" secondItem="uOB-Kd-0F3" secondAttribute="bottom" constant="10" id="WoL-qI-p3N"/>
                 <constraint firstItem="dDe-D7-ks6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="XAI-TD-tPq"/>
-                <constraint firstItem="HoR-jK-G7W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Yd2-Jh-g7g"/>
                 <constraint firstAttribute="bottom" secondItem="HoR-jK-G7W" secondAttribute="bottom" constant="36" id="cBj-6S-yFZ"/>
                 <constraint firstAttribute="trailing" secondItem="TDy-ZB-T1N" secondAttribute="trailing" constant="62" id="cgF-H2-D1T"/>
                 <constraint firstAttribute="bottom" secondItem="dDe-D7-ks6" secondAttribute="bottom" constant="-5" id="dqS-8f-fVO"/>
